# WhiteTower

./: .gitignore  CMakeLists.txt  deploy.ps1  versioning.cmake
Conduit/: CMakeLists.txt  JiraWorkflowManager.cpp  JiraWorkflowManager.h  WebServer.cpp  WebServer.h  _post_build_increment_template.cmake.in  apidoc.json  main.cpp
Conduit/apidoc/: index.html
Conduit/apidoc/assets/: main.bundle.js
Exporter/: CMakeLists.txt  Exporter.cpp  Exporter.h  main.cpp
Gandalf/: ApplicationController.cpp  ApplicationController.h  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  resource.qrc  version.h.in
Gandalf/Clients/: SyncManager.cpp  SyncManager.h  clientslistdialog.cpp  clientslistdialog.h  clientslistdialog.ui  objectslistdialog.cpp  objectslistdialog.h  objectslistdialog.ui  syncstatusdialog.cpp  syncstatusdialog.h  syncstatusdialog.ui
Gandalf/Settings/: SqlHighlighter.cpp  SqlHighlighter.h  exporttasksdialog.cpp  exporttasksdialog.h  exporttasksdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
Gandalf/Terminals/: StationDataContext.cpp  StationDataContext.h  StationSearchWidget.cpp  StationSearchWidget.h  generalinfowidget.cpp  generalinfowidget.h  generalinfowidget.ui  pingdialog.cpp  pingdialog.h  pingdialog.ui  pingmodel.cpp  pingmodel.h  poscardwidget.cpp  poscardwidget.h  poscardwidget.ui  workplacedata.cpp  workplacedata.h  workplacewidget.cpp  workplacewidget.h  workplacewidget.ui
Gandalf/Users/: usereditdialog.cpp  usereditdialog.h  usereditdialog.ui  userlistdialog.cpp  userlistdialog.h  userlistdialog.ui
Gandalf/res/: resources.rc
Isengard/: CMakeLists.txt  main.cpp
Isengard/Bot/: AttachmentManager.cpp  AttachmentManager.h  Bot.cpp  Bot.h  TelegramClient.cpp  TelegramClient.h
Oracle/: ApiClient.cpp  ApiClient.h  AppParams.cpp  AppParams.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DatabaseWorkplaceGenerator.cpp  DatabaseWorkplaceGenerator.h  DbManager.cpp  DbManager.h  IWorkplaceGenerator.h  JiraClient.cpp  JiraClient.h  Logger.cpp  Logger.h  RedmineClient.cpp  RedmineClient.h  SessionManager.cpp  SessionManager.h  StationStruct.h  User.cpp  User.h  WorkplaceGeneratorFactory.h  criptpass.cpp  criptpass.h
