cmake_minimum_required(VERSION 3.20)

project(WhiteTower VERSION 1.0 LANGUAGES CXX)

# Додайте сюди ваші підпроекти
# add_subdirectory(TheConduit)
# add_subdirectory(TheHerald)
# add_subdirectory(TheTelescope)
# add_subdirectory(Gandalf)
add_subdirectory(Oracle)
add_subdirectory(Conduit)
add_subdirectory(Gandalf)
